I2PSnark: Increase min-width for status column to prevent column header from wrapping.

--- a/installer/resources/themes/snark/ubergine/snark.css
+++ b/installer/resources/themes/snark/ubergine/snark.css
@@ -281,7 +281,7 @@ td:first-child {
 .snarkTorrentStatus:first-child {
      text-align: left !important;
      padding-left: 0px;
-     min-width: 92px;
+     min-width: 120px;
      font-weight: bold;
      color: #dd9 !important;
      font-size: 8pt;
